src/style.scss
body, html {
    height: 100%;
  }

  :root {
    text-size-adjust: 100%;
  }

  .auth-form {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
  }

  .auth-input {
    width: 70%;
    margin-top: 10px;
  }

  .auth-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
  }

  .auth-buttons > Button {
    margin-bottom: 12px;
  }

  .text-link {
    font-size: 12px;
  }

  .auth-links {
    cursor: pointer;
  }

  .number-rankings {
    -webkit-text-stroke-width: 0.75px;
    -webkit-text-stroke-color: #4d4e53;
  }

  .results-page {
    margin: 80px 40px 80px 40px;
  }

